# gpt-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile
data/shakespeare/: train.txt
include/: argparse.h  gpt.h  tokenizer.h  train.h
src/: argparse.cpp  gpt.cpp  main.cpp  tokenizer.cpp  train.cpp  train_tokenizer.cpp
